--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,23 +16,23 @@
         android:hint="@string/buscar_por_titulo"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:padding="12dp"
         android:textSize="16sp"
-        android:background="@android:drawable/editbox_background_normal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:padding="14dp"
+        android:background="@drawable/rounded_edittext"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginTop="24dp"/>
 
     <!-- Spinner para seleccionar género -->
     <Spinner
         android:id="@+id/spinnerGenero"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:popupBackground="@color/black"
-        android:background="@android:drawable/spinner_background"
-        app:layout_constraintTop_toBottomOf="@id/autoCompleteTitulo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        style="@style/SpinnerStyle"
+    app:layout_constraintTop_toBottomOf="@id/autoCompleteTitulo"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- EditText para ingresar el año -->
     <EditText
@@ -43,25 +43,30 @@
         android:inputType="number"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:padding="12dp"
         android:textSize="16sp"
-        android:background="@android:drawable/editbox_background_normal"
-        app:layout_constraintTop_toBottomOf="@id/spinnerGenero"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:padding="14dp"
+        android:background="@drawable/rounded_edittext"
+    app:layout_constraintTop_toBottomOf="@id/spinnerGenero"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginTop="16dp"/>
 
     <!-- Botón para aplicar filtros -->
     <Button
         android:id="@+id/btnFiltrar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/filtrar"
         android:textColor="@android:color/white"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextAnio"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="18sp"
+        android:backgroundTint="@color/red"
+    android:padding="16dp"
+    app:layout_constraintTop_toBottomOf="@id/editTextAnio"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginTop="24dp"
+    android:layout_marginHorizontal="32dp"
+    android:layout_marginBottom="16dp"/>
 
     <!-- RecyclerView para mostrar las películas -->
     <androidx.recyclerview.widget.RecyclerView
@@ -71,6 +76,7 @@
         app:layout_constraintTop_toBottomOf="@id/btnFiltrar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
