--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="red">#E50914</color> <!-- Rojo similar al de Netflix -->
+    <color name="white">#FFFFFF</color>
+    <color name="darker_gray">#A0A0A0</color>
+    <color name="colorPrimary">#FF6200EE</color> <!-- Puedes cambiar este valor -->
+    <color name="colorPrimaryDark">#3700B3</color> <!-- Puedes cambiar este valor -->
+    <color name="colorAccent">#03DAC5</color> <!-- Puedes cambiar este valor -->
 </resources>
