--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,82 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
-    <!-- Campo de búsqueda por título -->
-    <AutoCompleteTextView
-        android:id="@+id/autoCompleteTitulo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/buscar_por_titulo"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/darker_gray"
-        android:textSize="16sp"
-        android:padding="14dp"
-        android:background="@drawable/rounded_edittext"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginTop="24dp"/>
+    <!-- Contenido principal -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black">
 
-    <!-- Spinner para seleccionar género -->
-    <Spinner
-        android:id="@+id/spinnerGenero"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/SpinnerStyle"
-    app:layout_constraintTop_toBottomOf="@id/autoCompleteTitulo"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+        <!-- Toolbar -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:title="Películas"
+            app:titleTextColor="@android:color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- EditText para ingresar el año -->
-    <EditText
-        android:id="@+id/editTextAnio"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/ingresar_anio"
-        android:inputType="number"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/darker_gray"
-        android:textSize="16sp"
-        android:padding="14dp"
-        android:background="@drawable/rounded_edittext"
-    app:layout_constraintTop_toBottomOf="@id/spinnerGenero"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginTop="16dp"/>
+        <!-- Campo de búsqueda -->
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTitulo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/buscar_por_titulo"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="16sp"
+            android:padding="14dp"
+            android:background="@drawable/rounded_edittext"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
 
-    <!-- Botón para aplicar filtros -->
-    <Button
-        android:id="@+id/btnFiltrar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/filtrar"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:backgroundTint="@color/red"
-    android:padding="16dp"
-    app:layout_constraintTop_toBottomOf="@id/editTextAnio"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginTop="24dp"
-    android:layout_marginHorizontal="32dp"
-    android:layout_marginBottom="16dp"/>
+        <!-- Spinner -->
+        <Spinner
+            android:id="@+id/spinnerGenero"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/SpinnerStyle"
+            app:layout_constraintTop_toBottomOf="@id/autoCompleteTitulo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- RecyclerView para mostrar las películas -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewPeliculas"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnFiltrar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="16dp" />
+        <!-- Año -->
+        <EditText
+            android:id="@+id/editTextAnio"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/ingresar_anio"
+            android:inputType="number"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="16sp"
+            android:padding="14dp"
+            android:background="@drawable/rounded_edittext"
+            app:layout_constraintTop_toBottomOf="@id/spinnerGenero"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Botón -->
+        <Button
+            android:id="@+id/btnFiltrar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/filtrar"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:backgroundTint="@color/red"
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/editTextAnio"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="24dp"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginBottom="16dp"/>
+
+        <!-- RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewPeliculas"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/btnFiltrar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Menú lateral -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/nav_header"/>
+</androidx.drawerlayout.widget.DrawerLayout>
