--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,8 @@
     <item name="headerSubtitle" type="id" />
     <item name="headerTitle" type="id" />
     <item name="headerImage" type="id" />
+    <item name="btnPeliculas" type="id" />
+    <item name="btnSeries" type="id" />
+    <item name="btnPeliculasSelecion" type="id" />
+    <item name="btnSeriesSelecion" type="id" />
 </resources>
