--- a/app/src/main/res/layout/activity_seleccion_tipo.xml
+++ b/app/src/main/res/layout/activity_seleccion_tipo.xml
@@ -1,21 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="24dp">
+    android:background="@color/black">
 
-    <Button
-        android:id="@+id/btnPeliculasSeleccion"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pel_culas" />
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
-    <Button
-        android:id="@+id/btnSeriesSelecion"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbarSeleccionTipo"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:title="Selecciona tipo"
+            app:titleCentered="true"
+            android:titleTextColor="@android:color/white"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/series"
-        android:layout_marginTop="16dp" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="24dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <Button
+            android:id="@+id/btnPeliculasSeleccion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pel_culas" />
+
+        <Button
+            android:id="@+id/btnSeriesSeleccion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/series"
+            android:layout_marginTop="16dp" />
+
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
