--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,7 @@
         <item name="android:dropDownVerticalOffset">4dp</item>
         <item name="android:dropDownHorizontalOffset">4dp</item>
     </style>
+    <style name="AppTheme.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+    </style>
 </resources>
