--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@color/red"
+    android:background="@color/colorPrimaryDark"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Título del encabezado -->
+
     <TextView
         android:id="@+id/headerTitle"
         android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
         android:layout_marginTop="8dp"
         android:layout_gravity="center" />
 
-    <!-- Descripción o sub-título (opcional) -->
+
     <TextView
         android:id="@+id/headerSubtitle"
         android:layout_width="wrap_content"
