--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,22 +9,18 @@
         <item name="android:windowBackground">@android:color/black</item>
     </style>
 
-    <!-- Botón de filtro -->
     <style name="ButtonStyle">
         <item name="android:backgroundTint">@color/red</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:padding">@dimen/padding_large</item>
     </style>
 
-    <style name="SpinnerStyle">
-        <item name="android:background">@android:drawable/spinner_background</item>
-        <item name="android:dropDownSelector">@android:color/white</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:popupBackground">@color/black</item>
-        <item name="android:dropDownVerticalOffset">4dp</item>
-        <item name="android:dropDownHorizontalOffset">4dp</item>
-    </style>
     <style name="AppTheme.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
+    </style>
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
