--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,10 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="qver.Launcher" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">#000000</item> <!-- Fondo negro -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
